<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home_1"
        android:title="@string/app20"
        />
    <item
        android:id="@+id/nav_map"
        android:icon="@drawable/map1"
        android:title="@string/app21"
        />
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/search1"
        android:title="@string/app22"
        />
    <item
        android:id="@+id/nav_activity"
        android:icon="@drawable/notification_status1"
        android:title="@string/app23"
        />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/frame1"
        android:title="@string/app24"
        />
</menu>