<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/bookmark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/bookmark"
        android:hint="@string/app44"
        android:minHeight="48dp"
        android:padding="15dp"
        android:textColorHint="@color/black"
        android:textSize="21sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="250dp" />

    <Button
        android:id="@+id/applications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/document"
        android:hint="@string/app45"
        android:minHeight="48dp"
        android:padding="15dp"
        android:textColorHint="@color/black"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/bookmark"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/question"
        android:hint="@string/app46"
        android:minHeight="48dp"
        android:padding="15dp"
        android:textColorHint="@color/black"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/applications"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/setting"
        android:hint="@string/app47"
        android:minHeight="48dp"
        android:padding="15dp"
        android:textColorHint="@color/black"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/help"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/logout"
        android:hint="@string/app48"
        android:minHeight="48dp"
        android:padding="15dp"
        android:textColorHint="@color/black"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/settings"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />
</androidx.constraintlayout.widget.ConstraintLayout>